maalstroom/templates/dds/style.css
/* ... */
.dds-post-icons {
	float: right;
	margin-right: 100px;
}
.dds-post .dds-icon-button {
	visibility: hidden;
}
.dds-post:hover .dds-icon-button {
	visibility: visible;
}
.dds-reply {
	background-image: url("morphis://.dds/images/icons.png");
	background-repeat: no-repeat;
	width:17px;
	height:15px;
	float: left;
	background-position: left top;
}
.dds-reply:hover {
	background-image: url("morphis://.dds/images/icons-hover-color.png");
}
.dds-vote {
	background-image: url("morphis://.dds/images/icons.png");
	background-repeat: no-repeat;
	width:15px;
	height:15px;
	float: left;
	background-position: -76px top;
}
.dds-vote:hover {
	background-image: url("morphis://.dds/images/icons-hover-color.png");
}
.dds-mention {
	background-image: url("morphis://.dds/images/icons.png");
	background-repeat: no-repeat;
	width:15px;
	height:15px;
	float: left;
	background-position: -40px top;
	margin-left: 5px;
}
.dds-mention:hover {
	background-image: url("morphis://.dds/images/icons-hover-color.png");
}
.dds-dmail {
	background-image: url("morphis://.dds/images/icons.png");
	background-repeat: no-repeat;
	width:18px;
	height:15px;
	float: left;
	background-position: right top;
	margin-left: 5px;
}
.dds-dmail:hover {
	background-image: url("morphis://.dds/images/icons-hover-color.png");
}
.dds-follow {
	background-image: url("morphis://.dds/images/icons.png");
	background-repeat: no-repeat;
	width:16px;
	height:15px;
	float: left;
	background-position: -58px top;
	margin-left: 5px;
}
.dds-follow:hover {
	background-image: url("morphis://.dds/images/icons-hover-color.png");
}
.dds-hidden {
	display: none;
}
.dds-user-icon {
	float: left;
}


/************************
dds refresh text
***********************/

.dds-refresh-wrapper {
	margin: 3px 20px 10px 20px;
}
.dds-refresh-text {
	font-style: italic;
	font-size: .9em;
	color: #a2a6ab;
	padding: 10px 0 10px 0;
}

/* Other.*/
.dds-element {
	padding:8px;
	width: 100%;
	margin-top: 0;
	margin-bottom: 10px;
	border: 1px solid #b2b2b2;
	border-radius: 4px;
	font-size: 1.2em;
	box-shadow: 0px 0px 2px 1px rgba(0, 0, 0, 0.2) inset;
}


/*modal*/

.modalDialog-dmail {
	position: fixed;
	font-family: Arial, Helvetica, sans-serif;
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	background: rgba(0, 0, 0, 0.5);
	z-index: 99999;
	opacity:0;
	-webkit-transition: opacity 400ms ease-in;
	-moz-transition: opacity 400ms ease-in;
	transition: opacity 400ms ease-in;
	pointer-events: none;
}
.modalDialog-dmail:target {
	opacity:1;
	pointer-events: auto;
}
.modalDialog-dmail > div {
	width: 80%;
	height: 85%;
	position: relative;
	margin: 3% auto;
	padding: 20px 20px 10px 20px;
	border: 1px solid #a3a3a3;
	border-radius: 4px;
	box-shadow: 0 0 5px #3b3e43;
	-o-box-shadow: 0 0 5px #3b3e43;
	-webkit-box-shadow: 0 0 5px #3b3e43;
	-moz-box-shadow: 0 0 5px #3b3e43;
	background: #fff;
}
.close {
	border: 1px solid #a3a3a3;
	line-height: 25px;
	position: absolute;
	right: 3.5em;
	text-align: center;
	top: 2em;
	width: 28px;
	text-decoration: none;
	font-weight: bold;
	-webkit-border-radius: 3px;
	-moz-border-radius: 3px;
	border-radius: 3px;
	-webkit-transition: all 0.10s ease-in-out;
	-moz-transition: all 0.10s ease-in-out;
	transition: all 0.15s ease-in-out;
}
a.close {
	color: #a3a3a3;
}
.close:hover {
	background: #38a3af;
	color: #fff;
}


/*----- User Dropdown -----*/
/*Style for the first level menu bar*/
ul.dds-menu {
	position:fixed;
	top:0;
	height:3em;
	border: 1px solid #fff;
	border-radius: 3px;
	color: #fff;
	float: left;
	margin-right: 1em;
	position: relative;
	display: inline-block;
	vertical-align: middle;
	font-size: .9em;
	max-width: 85%;
	-webkit-transition: all 0.10s ease-in-out;
	-moz-transition: all 0.10s ease-in-out;
	transition: all 0.15s ease-in-out;
}
ul.dds-menu > li {
	float:left;
	list-style-type:none;
	width: 100%;
}
ul.dds-menu:hover {
	color: #38a3af;
	background: #371f44;
}
label.dds-menu-input {
	position:relative;
	display:block;
	padding:0 18px 0 12px;
	line-height:3em;
	transition:background 0.3s;
	cursor:pointer;
	overflow:hidden;
	white-space:nowrap;
	text-overflow:ellipsis;
}

label.dds-menu-input:after {
	content:"";
	position:absolute;
	display:block;
	top:50%;
	right:5px;
	width:0;
	height:0;
	border-top:4px solid rgba(255,255,255,1);
	border-bottom:0 solid rgba(255,255,255,1);
	border-left:4px solid transparent;
	border-right:4px solid transparent;
	transition:border-bottom .1s, border-top .1s .1s;
}

input.dds-menu-input:checked ~ label.dds-menu-input:after {
	border-top:0 solid rgba(255,255,255,1);
	border-bottom:4px solid rgba(255,255,255, 1);
	transition:border-top .1s, border-bottom .1s .1s;
}

/*hide the inputs*/
input.dds-menu-input {
	display:none
}

/*show the second level menu of the selected voice*/
input.dds-menu-input:checked ~ ul.dds-submenu {
	max-height:300px;
	transition:max-height 0.2s ease-in;
	max-height: 95px;
	overflow-y: auto;
	overflow-x: hidden;
	z-index: 999;
}

/*style for the second level menu*/
ul.dds-submenu {
	max-width:85%;
	max-height:0;
	padding:0;
	overflow:hidden;
	list-style-type:none;
	background:#26162f;
	box-shadow:0 0 1px rgba(0,0,0,.3);
	transition:max-height 0.5s ease-out;
	position:absolute;
	min-width:100%;
	-webkit-transition: all 0.10s ease-in-out;
	-moz-transition: all 0.10s ease-in-out;
	transition: all 0.15s ease-in-out;
}

ul.dds-submenu li {
	max-width: 100%;
}

ul.dds-submenu li a {
	max-width: 100%;
	display:block;
	padding:12px;
	color:#ddd;
	text-decoration:none;
	box-shadow:0 -1px rgba(0,0,0,.5) inset;
	transition:background .3s;
	white-space:nowrap;
	overflow:hidden;
	text-overflow:ellipsis;
}

ul.dds-submenu li a:hover {
	background:#371f44;
	color: #38a3af;
}
/* ... */

